<resources>
    <string name="app_name">PlanVenture</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_button_to_go_back_to_the_home_screen">A button to go back to the Home Screen</string>
    <string name="cancel">Cancel</string>
    <string name="select_dates">Select Dates</string>
    <string name="select_end_date">Select end date</string>
    <string name="enter_your_destination">Enter your destination</string>
    <string name="enter_the_number_of_participants">Enter the number of participants</string>
    <string name="save">Save</string>
    <string name="select_start_date">Select start date</string>
    <string name="create_your_trip">Create your trip</string>
    <string name="destination">Destination:</string>
    <string name="end_date">End Date:</string>
    <string name="number_participants">Number of participants:</string>
    <string name="name">Name:</string>
    <string name="start_date">Start Date:</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="my_trips">My trips</string>
    <string name="create_trip">Create trip</string>
    <string name="public_trips">Public Trips</string>
    <string name="textview">TextView</string>
    <string name="from_12_12_2023_to_15_12_2023">From 12-12-2023 to 15-12-2023</string>
    <string name="location_oslo">Location: Oslo</string>
    <string name="planning">Planning</string>
    <string name="trip_to_oslo">Trip to Oslo</string>
    <string name="expenseamount">expenseAmount</string>
    <string name="expensename">expenseName</string>
    <string name="add">add</string>
    <string name="enter_name">Enter name...</string>
    <string name="participants">Participants</string>
    <string name="description">Description:</string>
    <string name="expenses">Expenses</string>
    <string name="status">Status</string>
    <string name="select_datesTripInformation">Select Dates</string>
    <string name="enddate">EndDate</string>
    <string name="participantsTI">participants</string>
    <string name="startdate">StartDate</string>
    <string name="nameTI">Name:</string>
    <string name="start_dateTI">Start Date:</string>
    <string name="end_dateTI">End Date:</string>
    <string name="destinationTI">Destination:</string>
    <string name="number_of_participants">Number of participants:</string>
    <string name="trip_information">Trip Information</string>
    <string name="update">Update</string>
    <string name="configuration">Configuration</string>
    <string name="remove">Remove</string>
    <string name="textviewP">TextView</string>
    <string name="nameExpense">Name:</string>
    <string name="paid_by">Paid by:</string>
    <string name="participantsExp">Participants:</string>
    <string name="amount">Amount:</string>
    <string name="add_expense">Add expense</string>
    <string name="enter_an_amount">Enter an amount</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="amountE">Amount:</string>
    <string name="new_expense">New Expense</string>
    <string name="eur">EUR</string>
    <string name="nameExpenseNE">Name:</string>
    <string name="textviewNw">TextView</string>
    <string name="add_expenseExpensesActivity">Add expense</string>
    <string name="balances">Balances</string>
    <string name="expensesEA">Expenses</string>
    <string name="total">Total:</string>
    <string name="paidBy">Paid by:</string>
    <string name="dividingExpense">Dividing expense:</string>

</resources>